<resources>
    <string name="app_name">Lead Management</string>e
    <string name="app_desc">Business | Leads | Sales</string>
    <string name="title_activity_home">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_pic">Profile Image</string>
    <string name="navigation_drawer_name">C0d3rThomas</string>
    <string name="navigation_drawer_email">gci@jboss-outreach.com</string>

    <string name="action_settings">Settings</string>
    <string name="action_save">SAVE</string>
    <string name="toggle">Toggle theme</string>

    <string name="other_options">Other</string>

    <string name="title_contacts">Contacts</string>
    <string name="title_groups">Groups</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>


    <string name="title_add_contact">Add Contact</string>
    <string name="title_edit_contact">Edit Contact</string>

    <string name="contact_add">Add Contact</string>
    <string name="contact_edit">Edit Contact</string>

    <string name="serverLocation">Server Location</string>
    <string name="saved_server_ip">SERVER_IP</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deleteWarning">Are you sure you want to delete this contact?</string>
    <string name="search">Search contact</string>
    <string name="import_contacts">Import contacts</string>

    <string name="no_results">No results found</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt"> %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt"> %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="phone_title_text">Phone Number</string>
    <string name="location">Location(Optional)</string>
    <string name="query">Query</string>
    <string name="notes">Notes</string>

    <string name="preferences_name">com.community.jboss.leadmanagement.preferences</string>
    <string name="was_run_before_key">com.community.jboss.leadmanagement.wasrunbefore</string>
    <string name="slide_1_header">Welcome to Lead Management!</string>
    <string name="slide_1_content">A better way to manage your leads</string>
    <string name="slide_2_header">Everything in one place</string>
    <string name="slide_2_content">Easily manage and safely store all your business contacts</string>
    <string name="slide_3_header">Never forget again</string>
    <string name="slide_3_content">Record conversations to always have a backup of your important business calls</string>
    <string name="profile">Profile</string>
    <string name="password">Password</string>
    <string name="sign_in_via_google">SIgn in via google</string>
    <string name="sign_in_via_phone">Sign in via phone</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_received_code">Enter received code</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="add_contact">Add contact</string>
    <string name="not_signed">Please, sign in first…</string>
    <string name="title_callrecordings">Recorded Calls</string>
</resources>
