<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.LightAppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/add_contact_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.DarkPopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp">

            <ImageView
                android:id="@+id/contact_image"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_marginBottom="-40dp"
                android:layout_centerHorizontal="true"
                android:elevation="11dp"
                android:src="@drawable/redhat" />

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view"
                android:layout_below="@id/contact_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="30dp"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        android:id="@+id/contact_name_wrapper">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:hint="@string/name"
                            android:id="@+id/contact_name_field"
                            android:drawableStart="@drawable/ic_person"
                            android:drawableLeft="@drawable/ic_person"
                            android:drawablePadding="15dp"
                            />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        android:id="@+id/contact_number_wrapper"
                        android:layout_below="@id/contact_name_wrapper">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:hint="@string/hint_phone_number"
                            android:inputType="number"
                            android:id="@+id/contact_number_field"
                            android:drawableStart="@drawable/ic_phone"
                            android:drawableLeft="@drawable/ic_phone"
                            android:drawablePadding="15dp"
                            />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        android:id="@+id/contact_email_wrapper"
                        android:layout_below="@id/contact_number_wrapper">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:hint="@string/hint_email"
                            android:inputType="textEmailAddress"
                            android:id="@+id/contact_email_field"
                            android:drawableStart="@drawable/ic_email_blue"
                            android:drawableLeft="@drawable/ic_email_blue"
                            android:drawablePadding="15dp"
                            />

                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        android:id="@+id/contact_address_wrapper"
                        android:layout_below="@id/contact_email_wrapper">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:hint="@string/location"
                            android:id="@+id/contact_address_field"
                            android:drawableStart="@drawable/ic_location"
                            android:drawableLeft="@drawable/ic_location"
                            android:drawablePadding="15dp"
                            />

                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        android:id="@+id/contact_query_wrapper"
                        android:layout_below="@id/contact_address_wrapper">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:hint="@string/query"
                            android:id="@+id/contact_query_field"
                            android:drawableStart="@drawable/ic_question"
                            android:drawableLeft="@drawable/ic_question"
                            android:drawablePadding="15dp"
                            />

                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        android:id="@+id/contact_notes_wrapper"
                        android:layout_below="@id/contact_query_wrapper"
                        android:layout_marginBottom="40dp">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/notes"
                            android:id="@+id/contact_notes_field"
                            android:drawableStart="@drawable/ic_notes_blue"
                            android:drawableLeft="@drawable/ic_notes_blue"
                            android:drawablePadding="15dp"
                            />

                    </android.support.design.widget.TextInputLayout>
                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>
    </ScrollView>
</LinearLayout>
